# speech_radicalization_analysis

./: .gitignore  Makefile  README.md  pyproject.toml
data/interim/: asianhate_clean.csv  ice_clean.csv  islamophobia_clean.csv  lgbt_clean.csv  pal_isr_clean.csv
data/processed/: asianhate_classified.csv  asianhate_clean_annotated.csv  ice_classified.csv  ice_clean_annotated.csv  islamophobia_classified.csv  islamophobia_clean_annotated.csv  lgbt_classified.csv  lgbt_clean_annotated.csv  pal_isr_classified.csv  pal_isr_clean_annotated.csv  speech_classified.csv  test_predictions.csv
data/processed/bertweet_embeddings/: dataset_info.json  state.json
data/raw/: asianhate.csv  ice.csv  islamophobia.csv  lgbt.csv  pal_isr.csv
data/raw/asianhate/: twitter_BoycottChina.csv  twitter_ChinaVirus.csv  twitter_FuckChina.csv  twitter_StopChina.csv
data/raw/ice/: twitter_DeportThemAll.csv  twitter_ICE.csv  twitter_MassDeportationsNow.csv
data/raw/islamophobia/: twitter_BanIslam.csv  twitter_IslamIsTheProblem.csv  twitter_StopIslam.csv  twitter_StopIslamInvasion.csv
data/raw/israel-palestine/: twitter_FreePalestine.csv  twitter_Hamas.csv  twitter_HamasTerrorists.csv  twitter_StandWithIsrael.csv
data/raw/lgbt/: twitter_Gender-Ideology.csv  twitter_GenderIdeology.csv  twitter_NoLGBT.csv  twitter_ParentsRights.csv  twitter_WokeMindVirus.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.01-vtf-merging_data.ipynb  1.02-smg-text_classification.ipynb  1.03-smg-word_embeddings.ipynb  2.01-vtf-embeddings_viz.ipynb  3.01-vtf-xgboost.ipynb  3.02-vtf-transformer.ipynb  3.03-ro-transformer.ipynb  R_O_Data_Clean.ipynb
reports/: final_report.ipynb
reports/figures/: embeddings_2d.html  embeddings_3d.html
speech_radicalization_analysis/: __init__.py  dataset.py  features.py  plots.py
speech_radicalization_analysis/modeling/: predict.py  train.py
