[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "speech_radicalization_analysis"
version = "0.0.1"
description = "LLM for identifying categories of Speech Radicalization"
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "loguru",
    "matplotlib>=3.10.9",
    "mkdocs",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "pytorch-fid>=0.3.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm",
    "transformers>=5.8.0",
    "typer",
    "accelerate>=1.13.0",
    "gradio>=6.14.0",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["speech_radicalization_analysis"]
include = ["pyproject.toml", "speech_radicalization_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["speech_radicalization_analysis"]
force-sort-within-sections = true

